syntax = "proto3";

//lint:file-ignore SA1019 Generated deprecated import

package message;
option go_package = ".;message";

message LeaderLocationRequest {
}

message LeaderLocationResponse {
    string leaderAddress = 1;
}